k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix-backend
  namespace: operators
  labels:
    operator-controller: phoenix-envmanager-backend
    app.kubernetes.io/name: phoenix-backend
spec:
  selector:
    operator-controller: phoenix-envmanager-backend
    app.kubernetes.io/name: phoenix-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
