k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoenix-backend-ingress
  namespace: operators
  labels:
    operator-controller: phoenix-envmanager-backend
    app.kubernetes.io/name: phoenix-backend
spec:
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phoenix-backend
            port: 
              number: 80
